<resources>
    <string name="app_name">Aliyun Resource Manager</string>
    <string name="title_activity_main">Aliyun Resource Manager</string>
    
    <!-- ECS Management -->
    <string name="ecs_management">ECS Management</string>
    <string name="start_instance">Start Instance</string>
    <string name="stop_instance">Stop Instance</string>
    <string name="instance_id_hint">Instance ID</string>
    <string name="instance_status">Instance Status</string>
    <string name="refresh_status">Refresh Status</string>
    
    <!-- EIP Management -->
    <string name="eip_management">EIP Management</string>
    <string name="create_eip">Create EIP</string>
    <string name="release_eip">Release EIP</string>
    <string name="bind_eip">Bind EIP</string>
    <string name="unbind_eip">Unbind EIP</string>
    <string name="eip_address_hint">EIP Address/Allocation ID</string>
    <string name="instance_id_for_bind">Instance ID to Bind</string>
    <string name="bandwidth">Bandwidth (Mbps)</string>
    
    <!-- Common -->
    <string name="access_key_id">Access Key ID</string>
    <string name="access_key_secret">Access Key Secret</string>
    <string name="region_id">Region ID</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="result">Result:</string>
    <string name="loading">Loading...</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    
    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>